# Algomirror

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.py  gunicorn_config.py  init_db.py  package.json  pyproject.toml  requirements.txt  tailwind.config.js  websocket_service.py  wsgi.py
.claude/: settings.local.json
app/: __init__.py  models.py
app/accounts/: __init__.py  forms.py  routes.py
app/api/: routes.py
app/auth/: __init__.py  forms.py  routes.py
app/main/: routes.py
app/margin/: routes.py
app/static/css/: compiled.css  main.css
app/static/favicon/: site.webmanifest
app/static/js/: mobile-menu.js  mode-toggle.js  navbar.js  socket-events.js  theme.js
app/strategy/: routes.py
app/templates/: base.html  footer.html  layout.html  navbar.html
app/templates/accounts/: add.html  edit.html  manage.html
app/templates/auth/: change_password.html  login.html  register.html
app/templates/main/: account_positions.html  dashboard.html  index.html  websocket_monitor.html
app/templates/margin/: calculator.html  dashboard.html  requirements.html
app/templates/strategy/: builder.html  dashboard.html
app/templates/trading/: funds.html  holdings.html  option_chain.html  orderbook.html  positions.html  risk_monitor.html  tradebook.html  trading_hours.html
app/templates/tradingview/: strategy_monitor.html
app/trading/: __init__.py  routes.py
app/tradingview/: routes.py
app/utils/: __init__.py  background_service.py  compat.py  freeze_quantity_handler.py  init_trading_hours.py  margin_calculator.py  openalgo_client.py  option_chain.py  order_status_poller.py  position_monitor.py  rate_limiter.py  risk_manager.py  strategy_executor.py  supertrend.py  supertrend_exit_service.py  websocket_manager.py
docs/: 01-APPLICATION-OVERVIEW.md  02-ARCHITECTURE-GUIDE.md  03-API-INTEGRATION-GUIDE.md  05-FEATURES-IMPLEMENTATION.md  06-DATABASE-SCHEMA.md  ORB_DATA_ARCHITECTURE.md  openalgo.md  openalgo_expiry_example.py
install/: ALGOMIRROR-README.md  QUICK-REFERENCE.md  README.md  algomirror-websocket.service  install-algomirror.sh  manage-algomirror.sh
migrate/upgrade/: 002_add_product_to_strategy_executions.py  003_add_trailing_sl_tracking.py  004_add_supertrend_exit_reason.py  006_add_trailing_sl_initial_stop.py  007_add_margin_source_to_trade_qualities.py  008_add_option_buying_premium.py
migrations/versions/: 001_initial_migration.py
src/: input.css
