[project]
name = "algomirror"
version = "1.0.0"
description = "Enterprise-grade multi-account management platform for OpenAlgo"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "OpenFlare Technologies"}
]
keywords = [
    "trading",
    "openalgo",
    "multi-account",
    "broker",
    "algorithmic-trading"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "alembic==1.16.4",
    "anyio==4.10.0",
    "APScheduler==3.11.0",
    "blinker==1.9.0",
    "build==1.3.0",
    "cachelib==0.13.0",
    "cachetools==6.2.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.6",
    "cython==3.1.4",
    "Deprecated==1.2.18",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "Flask==3.1.2",
    "flask-cors==6.0.1",
    "Flask-Limiter==3.12",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.1.0",
    "Flask-Session==0.8.0",
    "Flask-SQLAlchemy==3.1.1",
    "flask-talisman==1.1.0",
    "Flask-WTF==1.2.2",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "limits==5.5.0",
    "llvmlite==0.44.0",
    "Mako==1.3.10",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "msgspec==0.19.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "openalgo==1.0.30",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "pandas==2.3.2",
    "pycparser==2.22",
    "Pygments==2.19.2",
    "pyproject-hooks==1.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "redis==6.4.0",
    "rich==13.9.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.43",
    "ta-lib==0.6.7",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "websocket-client==1.8.0",
    "Werkzeug==3.1.3",
    "wrapt==1.17.3",
    "WTForms==3.2.1",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

production = [
    "gunicorn>=21.0.0",
    "psycopg2-binary>=2.9.0",
]

testing = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "faker>=18.0.0",
]

[project.urls]
Homepage = "https://openalgo.in"
Documentation = "https://docs.openalgo.in"
Repository = "https://github.com/marketcalls/algomirror"
Issues = "https://github.com/marketcalls/algomirror/issues"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = [
    "static/**/*",
    "templates/**/*",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.tox
  | dist
  | migrations
  | node_modules
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "migrations",
    "node_modules",
]

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "migrations",
    "node_modules",
]
ignore = ["E203", "E266", "E501", "W503"]

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
